[package]
name = "claude-python-guardrails"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Sulistio <andrew@example.com>"]
description = "Simple exclusion checker for Python projects using Claude Code"
license = "MIT"
keywords = ["claude", "python", "exclusion", "guardrails"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Pattern matching
globset = "0.4"

# CLI interface
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Automation and concurrency
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.12"
